- now in prod mode to protect myself from myself ADD - back to top button on the homepage - changed filters (added search bar outside of filters), changed location of help to reduce space it took up (and fixed the overflow problem) - changed layout so mobile users can at least view the site somewhat comfortably - changed editor layout to use more icons - added serving sizes - added back to top button in recipe page for mobile users FIXED - fatal error when updating existing recipes since put recipe would include/update mongodb _id

--- a/styles/editor-page.css
+++ b/styles/editor-page.css
@@ -30,6 +30,7 @@
     padding: 0.25rem 0.5rem;
 }
 input#edit-time {width: 4rem;}
+input#servings {width: 2rem;}
 
 #editor-page-steps, #editor-page-ingredients {
     width: 98%; padding: 0.5rem;
@@ -148,7 +149,7 @@ input#edit-time {width: 4rem;}
     width: 100%;
 }
 .edit-ingredient-group-div .top {
-    background-color: #c7c7c7;
+    background-color: var(--bc-main);
     display: flex; align-items: center;
     padding: 1rem;
     gap: 1rem;
@@ -213,6 +214,18 @@ input#edit-time {width: 4rem;}
 
     .edit-step-div {
         flex-direction: column-reverse;
+    }
+
+    .edit-ingredient-group-div {
+        overflow-x: auto;
+    }
+    .edit-ingredient-group-div .top {
+        flex-wrap: wrap;
+        gap: 0.5rem 0;
+        padding: 0.5rem;
+    }
+    .edit-ingredient-group-div .top h1 {
+        width: calc(100% - 3rem);
     }
 
     .edit-step-options {
